Implementing client apis
Implementing client's api includes auth, menu, product display and checkout

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -1,10 +1,27 @@
 {
   "dash": {
+     "sidebar":{
+      "overview":"التحليلات",
+      "inv":"المحزن",
+      "order":"الطلبات",
+      "promo":"كوبونات الخصم",
+      "storage":"المنتجات",
+      "cate":"الفئات",
+      "sub":"الفئات الفرعية",
+      "items":"فئفات الفئات الفرعية",
+      "brand":"العلامات التجارية"
+    },
+    "menu":"القائمة",
+    "order":"طلب",
     "search": "بحث",
     "create": "إنشاء",
     "update": "تحديث",
     "edit": "تعديل",
     "delete": "حذف",
+    "code":"كوبون الخصم",
+    "usage":"عدد الاستخدامات",
+    "discountC":"كوبون الخصم",
+    "expired":"تاريخ الانتهاء",
     "delete_question1": " هل أنت متأكد أنك تريد حذف",
     "from": " من ",
     "?": " ؟",
@@ -78,5 +95,102 @@
       "value_is_required": "القيمة مطلوبة",
       "price_is_required": "السعر مطلوب"
     }
+  },
+  "client":{
+    "product":{
+      "add":"اضافة الى عربة التسوق",
+      "complete":"اكمل مظهرك",
+      "review":"التقيمات",
+      "write":"اكتب تقيم",
+      "tos":"الشروط والأحكام الخاصة بالنشر",
+      "recent":"التقيمات الحديثة",
+      "seeall":"شاهد جميع التقيمات",
+      "lyd":"دينار ليبي",
+      "mm":"مل",
+      "desc":"الوصف",
+      "ing":"المكونات",
+      "tips":"نصائح",
+      "notes":"ملاحظات",
+      "learn":"شاهد المزيد"
+    },
+        "best":"افضل المبيعات",
+        "new":"المنتجات الجديدة",
+        "brands":"اكتشف جميع الماركات",
+        "view":"شاهد جميع الماركات",
+    "shop":{
+      "refine":"الفلاتر",
+      "brands":"الماركات",
+      "size":"الأحجام",
+      "color":"الألوان",
+      "gender":"الجنس",
+      "price":"السعر",
+      "review":"التقيمات",
+      "male":"للرجال",
+      "female":"للاناث",
+      "lyd":"دينار ليبي",
+      "seemore":"شاهد المزيد",
+      "basket":"عربة التسوق",
+      "empty":"عربة التسوق فارغة",
+      "checkout":"الدفع",
+      "total":"الاجمالي",
+      "wishlist":"قائمة الرغبات",
+      "wempty":"قائمة الرغبات فارغة",
+      "emptyproduct":"لا يوجد منتجات لعرضها"
+    },
+    "checkout":{
+      "mm":"مل",
+      "color":"اللون",
+      "summary":"ملخص الطلب",
+      "promo":"كوبون الخصم",
+      "title":"الرجاء مسح ايا فراعات او رموز اضافية قبل كتابة الكوبون",
+      "enter":"ادخل كوبون الخصم",
+      "apply":"تطبيق",
+      "delivery":"التوصيل",
+      "free":"مجاني",
+      "total":"الاجمالي مع الضريبة",
+      "btn":"الدفع الاّمن",
+      "qty":"الكمية"
+    },
+    "area":{
+      "day":"يوم جميل,",
+      "my":"طلباتي",
+      "order":"الطلبات",
+      "otitle":"عرض معلومات الطلب",
+      "account":"اعدادات الحساب",
+      "info":"المعلومات الشخصية",
+      "book":"دفتر العناوين",
+      "password":"تغير كلمة المرور",
+      "newpassword":"كلمة المرور الجديدة",
+      "cpassword":"تاكيد كلمة المرور",
+      "logout":"تسجيل الخروج",
+      "show":"اظهار التفاصيل",
+      "status":"الحالة",
+      "payment":"طريقة الدفع",
+      "total":"الاجمالي",
+      "date":"التاريخ",
+      "action":"الخيارات",
+      "name":"الاسم",
+      "brand":"الماركة",
+      "size":"الحجم",
+      "color":"اللون",
+      "qty":"الكمية",
+      "image":"الصورة",
+      "email":"البريد الالكتروني",
+      "fname":"الاسم الاول",
+      "lname":"الاسم الاخير",
+      "phone":"رقم الهاتف",
+      "save":"حفط",
+      "new":"اضافة عنوان جديد",
+      "country":"البلد",
+      "address":"العنوان (البناء/الشارع)",
+      "more":"عنوان اضافي",
+      "city":"المدينة",
+      "area":"المنطقة",
+      "primary":"تعيين كعنوان رئيسي",
+      "title":"اضافة عنوان جديد الى حسابك",
+      "delete":"هل انت متاكد من حذف هذا العنوان؟",
+      "dbtn":"حذف"
+    }
+
   }
 }
