--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,10 +1,27 @@
 {
   "dash": {
+    "sidebar":{
+      "overview":"Overview",
+      "inv":"Invontry Mangment",
+      "order":"Order Mangment",
+      "promo":"Promo Code",
+      "storage":"Products",
+      "cate":"Category",
+      "sub":"Sub Category",
+      "items":"Items",
+      "brand":"Brands"
+    },
+    "menu":"Menu",
+    "order":"Order",
     "search": "Search",
     "create": "Create",
     "update": "Update",
     "edit": "Edit",
     "delete": "Delete",
+    "code":"Code",
+    "usage":"Usage Count",
+    "discountC":"Discount Code",
+    "expired":"Expired Date",
     "delete_question1": "Are you sure you want delete ",
     "from": " from ",
     "?": " ?",
@@ -77,6 +94,102 @@
       "you_must_select_one_of_brands": "You must select one of brands",
       "value_is_required": "Value is required",
       "price_is_required": "Price is required"
+    }
+  },
+   "client":{
+    "product":{
+      "add":"Add to basket",
+      "complete":"Complete Your Look",
+      "review":"Reviews",
+      "write":"Write a review",
+      "tos":"TERMS AND CONDITIONS OF PUBLICATION",
+      "recent":"Recent Reviews",
+      "seeall":"See all reviews",
+      "lyd":"LYD",
+      "mm":"ml",
+      "desc":"Description",
+      "ing":"Ingredients",
+      "tips":"Tips",
+      "notes":"Notes",
+      "learn":"Learn More"
+    },
+    "best":"BestSellers",
+    "new":"New. Need. Now",
+    "brands":"Discover the Brands",
+    "view":"View All Brands",
+    "shop":{
+      "refine":"Refine",
+      "brands":"Brands",
+      "size":"Size",
+      "color":"Color",
+      "gender":"Gender",
+      "price":"Price",
+      "review":"Reviews",
+      "male":"Male",
+      "female":"Female",
+      "lyd":"LYD",
+      "seemore":"See more",
+      "basket":"Basket",
+      "empty":"Your basket is empty",
+      "checkout":"Checkout",
+      "total":"Subtotal",
+      "wishlist":"Wishlist",
+      "wempty":"Wishlist is empty",
+      "emptyproduct":"There is no product matching the selected filter"
+    },
+    "checkout":{
+      "mm":"ml",
+      "color":"Color",
+      "summary":"Order Summary",
+      "promo":"Promo Code",
+      "title":"Remove any spaces or dashes before hitting apply.",
+      "enter":"Enter Promo Code",
+      "apply":"Apply",
+      "delivery":"Delivery",
+      "free":"Free",
+      "total":"Total (incl. VAT)",
+      "btn":"Secure Checkout",
+      "qty":"Qty"
+    },
+    "area":{
+      "day":"Good day,",
+      "my":"My Orders",
+      "order":"Orders",
+      "otitle":"Showing Order information",
+      "account":"Account Settings",
+      "info":"Personal Information",
+      "book":"Address Book",
+      "password":"Change Password",
+      "newpassword":"New Password",
+      "cpassword":"Confirm Password",
+      "logout":"Logout",
+      "show":"Show Details",
+      "status":"Status",
+      "payment":"Payment",
+      "total":"Total",
+      "date":"Date",
+      "action":"Action",
+      "name":"Name",
+      "brand":"Brand",
+      "size":"Size",
+      "color":"Color",
+      "qty":"QTY",
+      "image":"Image",
+      "email":"Email Address",
+      "fname":"First Name",
+      "lname":"Last Name",
+      "phone":"Phone Number",
+      "save":"Save",
+      "new":"Add a new address",
+      "country":"Country",
+      "address":"Delivery Address (Building/Street)",
+      "more":"Additional Address",
+      "city":"City",
+      "area":"Area",
+      "primary":"Set as preferred address",
+      "title":"Add new address to your account",
+      "delete":"Are you sure you want to delete this address?",
+      "dbtn":"Delete"
     }
   }
 }
